<resources>
    <string name="app_name">FindMe</string>
    <string name="title_menu">Menu</string>
    <string name="title_messenger">Messages</string>
    <string name="btn_messages">Messages</string>
    <string name="default_unread_msg_count">0</string>
    <string name="type_your_message_here">Type your message here</string>
    <string name="btn_send">➡</string>
    <string name="title_steps">Steps taken</string>
    <string name="btn_steps">Steps</string>
    <string name="lbl_steps_taken">You have taken <b>N</b> steps so far</string>
    <string name="sender_name">sender_name</string>
    <string name="title_activity_maps">Locations</string>
    <string name="btn_maps">Map</string>
    <string name="user_is_not_live">User is not live</string>
    <string name="groups">Groups</string>
    <string name="leave_group">Leave group</string>
    <string name="user_not_live">User is not live</string>
    <string name="select_from_the_following_groups">Select from the following groups:</string>
    <string name="add_new_group">Add new group</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="enter_new_group_name">Enter the name of new the group</string>
    <string name="remove_group">Remove group</string>
    <string name="are_you_sure">Are you sure?</string>
</resources>